--- a/examples/omnetpp_burst/.github/workflows/ci.yml
+++ b/examples/omnetpp_burst/.github/workflows/ci.yml
@@ -8,10 +8,8 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
+    # Note: macOS builds are disabled due to system Python install restrictions with opp_env
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
