--- a/.github/workflows/omnetpp_generation.yml
+++ b/.github/workflows/omnetpp_generation.yml
@@ -294,7 +294,7 @@ jobs:
         if [ -d ~/omnetpp-6.2.0/.venv ]; then source ~/omnetpp-6.2.0/.venv/bin/activate; fi
         mkdir -p build
         cd build
-        cmake .. -DCMAKE_BUILD_TYPE=Release
+        cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$HOME/omnetpp-6.2.0
         cmake --build . --config Release
 
     - name: Run simulation
