--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,24 @@ name: CI
 on:
   push:
     branches: [main]
+    paths:
+      - 'lib/**'
+      - 'test/**'
+      - 'mix.exs'
+      - 'mix.lock'
+      - '.github/workflows/ci.yml'
+      - 'scripts/**'
+      - 'examples/**'
   pull_request:
     branches: [main]
+    paths:
+      - 'lib/**'
+      - 'test/**'
+      - 'mix.exs'
+      - 'mix.lock'
+      - '.github/workflows/ci.yml'
+      - 'scripts/**'
+      - 'examples/**'
 
 jobs:
   test:
@@ -216,49 +232,6 @@ jobs:
       
       - name: Run Dialyzer
         run: mix dialyzer --format github
-  
-  docs:
-    name: Documentation
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Elixir
-        uses: erlef/setup-beam@v1
-        with:
-          elixir-version: '1.16'
-          otp-version: '26'
-      
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            deps
-            _build
-          key: ${{ runner.os }}-mix-docs-${{ hashFiles('**/mix.lock') }}
-      
-      - name: Install dependencies
-        run: mix deps.get
-      
-      - name: Generate sequence diagrams
-        run: mix test --only diagram_generation
-      
-      - name: Build documentation
-        run: mix docs
-      
-      - name: Upload diagrams
-        uses: actions/upload-artifact@v4
-        with:
-          name: sequence-diagrams
-          path: generated/examples/*.html
-      
-      - name: Upload documentation
-        uses: actions/upload-artifact@v4
-        with:
-          name: documentation
-          path: doc/
   
   generated-vlingo:
     name: Test Generated VLINGO XOOM Code
