--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,7 +45,7 @@ jobs:
         run: mix compile
 
       - name: Run tests
-        run: mix test
+        run: mix test --exclude slow --exclude omnetpp
 
       - name: Build documentation
         run: mix docs
@@ -57,6 +57,7 @@ jobs:
           mix hex.publish --yes
 
       - name: Create GitHub Release
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
