--- a/.github/workflows/phony_validation.yml
+++ b/.github/workflows/phony_validation.yml
@@ -18,7 +18,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         go-version: ['1.21', '1.22']
         example: [phony_pubsub, phony_pipeline, phony_burst, phony_loadbalanced]
 
